tests/samples/valid/ClassAchievement.py
# cases where ClassAchievement should unlock

# >> CASE
class Foo:
    pass

t = Foo()

# >> CASE
class Bar():
    pass

Bar()
